# vpn_customer_tg_bot

./: .env_example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_polling.py
.github/workflows/: dokku.yml
ansible_deployment/: deploy.yml  hosts.yml
diagrams/: VPN_bot diagram.drawio
django_apps/users/: admin.py  apps.py  models.py
django_apps/users/migrations/: 0001_initial.py
django_apps/vpn_config/: apps.py  models.py
django_apps/vpn_config/migrations/: 0001_initial.py
django_back_project/: settings.py  views.py
dtb/: settings.py
src/: logging_config.py  manage.py  run_polling.py
src/django_module/django_back_project/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
src/telegram_bot/: dispatcher.py  main.py  utils.py
src/telegram_bot/handlers/: account.py  info.py  keyboards.py  menu.py  start.py  start_command.py  static_text.py
src/telegram_bot/vpn_service/: api.py  api_models.py  models.py  service.py  utils.py
telegram_bot/: dispatcher.py  main.py  system_commands.py
telegram_bot/handlers/admin/: handlers.py
telegram_bot/handlers/broadcast_message/: handlers.py  utils.py
telegram_bot/handlers/create_vpn/: handlers.py  keyboards.py  static_text.py
telegram_bot/handlers/location/: handlers.py  keyboards.py
telegram_bot/handlers/onboarding/: handlers.py  (+2 more)
tgbot/: dispatcher.py  main.py  system_commands.py
tutorials/: __init__.py  nested_conversation.py  payment.py  payment_conversation.py  paymentbot.py  simple_conversation.py
users/: admin.py  models.py  tasks.py
(+33 files in other folders)
